--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "dependencies": {
     "@hotwired/turbo-rails": "^7.0.0-beta.5",
+    "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "bootstrap": "^5.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
