--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,12 +7,37 @@ AllCops:
   NewCops: enable
   Exclude:
     - 'bin/**/*'
+    - 'db/schema.rb'
+    - 'lib/tasks/**/*'
+
+Bundler/OrderedGems:
+  Enabled: false
 
 Layout/LineLength:
   Enabled: false
 
+Lint/Debugger:
+  DebuggerMethods:
+    RubyJard:
+      - jard
+
 Metrics:
   Enabled: false
 
+Style/BlockComments:
+  Enabled: false
+
+Style/ConditionalAssignment:
+  Enabled: false
+
 Style/Documentation:
+  Enabled: false
+
+Style/SymbolArray:
+  Enabled: false
+
+
+# RSpec
+
+RSpec/FactoryBot/CreateList:
   Enabled: false
