--- a/.github/workflows/lint-on-push.yml
+++ b/.github/workflows/lint-on-push.yml
@@ -4,13 +4,15 @@ jobs:
   rubocop:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
+      - name: Setup
+        - uses: actions/checkout@v2
+        - uses: ruby/setup-ruby@v1
+          with:
+            bundler-cache: true
+        - run: bundle install
 
-      - run: bundle install
-      - run: bundle exec rubocop
+      - name: Run checks
+        - run: bundle exec rubocop
 
   haml-lint:
     runs-on: ubuntu-latest
