--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -4,14 +4,16 @@ jobs:
   test-rspec:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
+      - name: Setup
+        - uses: actions/checkout@v2
+        - uses: ruby/setup-ruby@v1
+          with:
+            bundler-cache: true
+        - run: bundle install
+        - run: bundle exec rails parallel:setup
 
-      - run: bundle install
-      - run: bundle exec rails parallel:setup
-      - run: bundle exec parallel_rspec
+      - name: Run tests
+        - run: bundle exec parallel_rspec
 
   test-cucumber:
     runs-on: ubuntu-latest
