--- a/.github/workflows/lint-on-push.yml
+++ b/.github/workflows/lint-on-push.yml
@@ -12,7 +12,7 @@ jobs:
       - run: bundle install
 
       - name: Run checks
-        - run: bundle exec rubocop
+        run: bundle exec rubocop
 
   haml-lint:
     runs-on: ubuntu-latest
