--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -4,25 +4,25 @@ jobs:
   test-rspec:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@v1
+      - Setup Ruby
+        uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
       - run: bundle install
       - run: bundle exec rails parallel:setup
-
-      - name: Run tests
-        run: bundle exec parallel_rspec
+      - run: bundle exec parallel_rspec
 
   test-cucumber:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - Setup Ruby
+        uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-
       - run: bundle install
       - run: bundle exec rails parallel:setup
       - run: yarn
