--- a/.github/workflows/lint-on-push.yml
+++ b/.github/workflows/lint-on-push.yml
@@ -11,8 +11,7 @@ jobs:
         with:
           bundler-cache: true
       - run: bundle install
-      - name: Run checks
-        run: bundle exec rubocop
+      - run: bundle exec rubocop
 
   haml-lint:
     runs-on: ubuntu-latest
