--- a/config/database.yml
+++ b/config/database.yml
@@ -57,6 +57,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  host: localhost
+  username: postgres
+  password: postgres
   database: sandbox_rails_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
