--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -1,7 +1,10 @@
-name: Test on push
+name: Test and lint on push
+
 on: [push]
+
 jobs:
   test-rspec:
+    name: rspec
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -24,11 +27,17 @@ jobs:
         with:
           bundler-cache: true
 
-      - run: bundle install
+      - name: bundle install
+        run: bundle install
+
+      - name: Configure database
+        run: cp config/database.ci.yml config/database.yml
+
       - run: bundle exec rails parallel:setup
       - run: bundle exec parallel_rspec
 
   test-cucumber:
+    name: cucumber
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -51,7 +60,46 @@ jobs:
         with:
           bundler-cache: true
 
-      - run: bundle install
-      - run: bundle exec rails parallel:setup
+      - name: bundle install
+        run: bundle install
+
+      - name: Configure database
+        run: cp config/database.ci.yml config/database.yml
+
       - run: yarn
+      - run: bundle exec rails parallel:setup
       - run: bundle exec parallel_cucumber
+
+    rubocop:
+    name: rubocop
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
+      - name: bundle install
+        run: bundle install
+
+      - run: bundle exec rubocop
+
+  haml-lint:
+    name: haml-lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
+      - name: bundle install
+        run: bundle install
+
+      - run: bundle exec haml-lint
