--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,8 @@
 {
   "packageRules": [
     {
-      "automerge": true
+        "matchUpdateTypes": ["major", "minor", "patch", "pin", "digest", "lockFileMaintenance", "rollback", "bump"],
+        "automerge": true
     }
   ],
   "extends": [
