Satisfy the linter

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,3 +48,6 @@ RSpec/LeadingSubject:
 
 RSpec/MultipleExpectations:
   Enabled: false
+
+RSpec/FactoryBot/ConsistentParenthesesStyle:
+  Enabled: false
