Update Renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,5 @@
 {
-  "packageRules": [
-    {
-        "matchUpdateTypes": ["major", "minor", "patch", "pin", "digest", "lockFileMaintenance", "rollback", "bump"],
-        "automerge": true
-    }
-  ],
   "extends": [
-    "config:base"
+    "config:recommended"
   ]
 }
